<resources>
    <string name="app_name">Zhihu Daily</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="night_mode">夜间模式</string>
    <string name="day_mode">日间模式</string>
    <string name="my_collection">我的收藏</string>

    <string name="ic_menu_home">首页</string>
    <string name="ic_menu_recommend">用户推荐</string>
    <string name="ic_menu_movie">电影日报</string>
    <string name="ic_menu_company">大公司</string>
    <string name="ic_menu_security">互联网安全</string>
    <string name="ic_menu_game">游戏日报</string>
    <string name="ic_menu_comic">动漫日报</string>
    <string name="ic_menu_sports">体育日报</string>
    <string name="menu_title_entertainment">娱乐</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
</resources>
